#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(opcodes_dumper, [1.0.0], [http://projects.laruence.com])
AM_INIT_AUTOMAKE

AC_CONFIG_SRCDIR([opcodes_dumper.cpp])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX([g++])

AC_MSG_CHECKING(for php-config)
AC_ARG_WITH(php-config,
             [  --with-php-config=[DIR]  Path to php-config [php-config]], 
             [PHP_CONFIG=$withval],
             no)

if test -z "$PHP_CONFIG"
then
    PHP_CONFIG=`which php-config`
fi

if test ! -f $PHP_CONFIG 
then
    AC_MSG_ERROR([could not found php-config, use --with-php-config to set])
fi

PREFIX=`$PHP_CONFIG --prefix 2>/dev/null | sed -e 's/\/$//g' `
INCLUDES=`$PHP_CONFIG --includes 2>/dev/null | sed -e 's/\/$//g' `
LIBRARIES=$PREFIX"/lib"

CPPFLAGS=$INCLUDES
LDFLAGS="-L${LIBRARIES}"
 
# Checks for libraries.
AC_MSG_CHECKING(for php5 library)
AC_CHECK_LIB([php5], [php_var_dump])

# Checks for header files.
# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_OUTPUT([Makefile])
